tests/paczka2/big_fuzzy/52268951.err
Error in line 11: syIwGDet S932 69,0
Error in line 17: nne A562 15,3
Error in line 5: LW9A4EzS A562 8,9
Error in line 31: czSMuZ S341 8,82
Error in line 33: Dmg A357 93,9
Error in line 40: syIwGDet A!62 136,0
Error in line 37: czSMuZ S341 18,4
Error in line 47: dt6mY8 S341 59,7
Error in line 51: dt6mY8 A357 97,0
Error in line 54: dt6mY8 S932 28,3
Error in line 62: LW9A4EzS A357 35,9
Error in line 79: nne S341 90,91
Error in line 73: nne S341 99,7
Error in line 81: LW9A4EzS A562 16,8
Error in line 77: S341 S932 6,5
Error in line 89: S341 A562 67,0
Error in line 84: syIwGDet S341 114,0
Error in line 91: S341 S932 10,0
Error in line 101: S341 S341 7,4
Error in line 114: Dmg S341 79,0
Error in line 117: syIwGDet S932 37,3
Error in line 116: Dmg A562 39,7
Error in line 123: dt6mY8 S932 47,4
Error in line 119: Dmg S932 62,5
Error in line 134: nne A357 74,7
Error in line 140: dt6mY8 A357 2,1
Error in line 143: S341 A562 36,5
Error in line 139: nne S932 13,8
Error in line 167: czSMuZ S932 23,8
Error in line 157: syIwGDet S932 77,9
Error in line 170: czSMuZ S341 67,3
Error in line 164: nne A357 63,8
Error in line 186: nne S932 47,8
Error in line 191: Dmg A357 66,1
Error in line 198: nne S932 58,77
Error in line 202: syIwGDet S341 17,4
Error in line 209: LW9A4EzS A562 78,8
Error in line 195: nne S932 22,4
Error in line 214: nne S341 6,5
Error in line 223: syIwGDet S932 95,5
Error in line 227: dt6mY8 A357 337,54
Error in line 222: LW9A4EzS A357 62,1
Error in line 240: nne A357 93,1
Error in line 239: LW9A4EzS S932 90,6
